Replace deprecated URL constructor with URL.create().toURL()