@@ -2,6 +2,7 @@ package io.jenkins.infra.repository_permissions_updater;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Set;
@@ -19,8 +20,8 @@ public class KnownUsers {
 
     static {
         try {
-            knownArtifactoryUsers.addAll(parseJson(new URL(ARTIFACTORY_USER_NAMES_URL)));
-            knownJiraUsers.addAll(parseJson(new URL(JIRA_USER_NAMES_URL)));
+            knownArtifactoryUsers.addAll(parseJson(URI.create(ARTIFACTORY_USER_NAMES_URL).toURL()));
+            knownJiraUsers.addAll(parseJson(URI.create(JIRA_USER_NAMES_URL).toURL()));
         } catch (IOException e) {
             e.printStackTrace();
         }
